efecto 3d de artista, hover con play, home,playlist y artista

--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -21,137 +21,201 @@
         
     </header>
     <section class="content">
+        <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
+        
         <section class="sugerencias">
-        <!-- back--><a href="home.html" class="back"></a>
-        <h1>Artista:  Queen</h1>
+            <h1 class="border">Artista:  Queen</h1>
         </section>
 
-        <section class="music-content border swing-in-top-fwd">
-            <div class="songs song3 song-search"></div>
-            <section class="song-info">
-                <p class="p-info">I want to be free - Freddy Mercury</p>
-                <p>3.5 min</p>
-            </section>
-                    <section class="actions margin-actions">
-                        <div class="action action1"></div>
-                        <div class="action action2"></div>
-                        <div class="action action3"></div>
-                    </section>
+        <h1 class="margen encabezado border">Canciones</h1>
+        <section class="art">
+            <table class="table-playlist">
+                <tbody>
+                    <tr class="fila  swing-in-top-fwd">                                            
+                        <td class="celda-artista celda-song4"></td>
+                        <td class="celda-artista">Don't stop me now</td>
+                        <td class="celda-artista">Queen</td>
+                        <td class="celda-artista">5.3 min</td>
+                        <td class="celda-artista">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila  swing-in-top-fwd1">
+                        <td class="celda celda-song4"></td>
+                        <td class="celda">Love of my life</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">4.5 min </td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd2">
+                        <td class="celda celda-song3"></td>
+                        <td class="celda">I want to break free</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">3.5 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd3">
+                        <td class="celda celda-song4"></td>
+                        <td class="celda">Radio gaga</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">6.1 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd4">
+                        <td class="celda celda-song4"></td>
+                        <td class="celda">We will rock you</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">5.8 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd hiden">
+                        <td class="celda celda-song1"></td>
+                        <td class="celda">Hey you</td>
+                        <td class="celda">Pink Floyd</td>
+                        <td class="celda">5.3 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd1 hiden">
+                        <td class="celda celda-song2"></td>
+                        <td class="celda">Another bite dust</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">4.5 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd2 hiden">
+                        <td class="celda celda-song3"></td>
+                        <td class="celda">Under presure</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">3.5 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd3 hiden">
+                        <td class="celda celda-song4"></td>
+                        <td class="celda">We are the champios</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">6.1 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                    <tr class="fila swing-in-top-fwd4 hiden">
+                        <td class="celda celda-song4"></td>
+                        <td class="celda">Crazy little thing  called love</td>
+                        <td class="celda">Queen</td>
+                        <td class="celda">5.8 min</td>
+                        <td class="celda">
+                            <section class="actions">
+                                <div class="action action1"></div>
+                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action3"></div>
+                            </section>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
-        <section class="music-content border swing-in-top-fwd1">
-            <div class="songs song3 song-search"></div>
-            <section class="song-info">
-                <p class="p-info">I want to be free - Freddy Mercury</p>
-                <p>3.5 min</p>
-            </section>
-                    <section class="actions margin-actions">
-                        <div class="action action1"></div>
-                        <div class="action action2"></div>
-                        <div class="action action3"></div>
-                    </section>
-        </section>
-        <section class="music-content border swing-in-top-fwd2">
-            <div class="songs song3 song-search"></div>
-            <section class="song-info">
-                <p class="p-info">I want to be free - Freddy Mercury</p>
-                <p>3.5 min</p>
-            </section>
-                    <section class="actions margin-actions">
-                        <div class="action action1"></div>
-                        <div class="action action2"></div>
-                        <div class="action action3"></div>
-                    </section>
-        </section>
-        <section class="music-content border swing-in-top-fwd3">
-            <div class="songs song1 song-search"></div>
-            <section class="song-info">
-                <p class="p-info">Radio gaga - Queen</p>
-                <p>6.1 min</p>
-            </section>
-                    <section class="actions margin-actions">
-                        <div class="action action1"></div>
-                        <div class="action action2"></div>
-                        <div class="action action3"></div>
-                    </section>
-        </section>
-        <section class="music-content border swing-in-top-fwd4">
-            <div class="songs song3 song-search"></div>
-            <section class="song-info">
-                <p class="p-info">I want to be free - Freddy Mercury</p>
-                <p>3.5 min</p>
-            </section>
-                    <section class="actions margin-actions">
-                        <div class="action action1"></div>
-                        <div class="action action2"></div>
-                        <div class="action action3"></div>
-                    </section>
-        </section>
-        <div class="bloque2">
-            <section class="music-content border swing-in-top-fwd">
-                <div class="songs song3 song-search"></div>
-                <section class="song-info">
-                    <p class="p-info">I want to be free - Freddy Mercury</p>
-                    <p>3.5 min</p>
-                </section>
-                        <section class="actions margin-actions">
-                            <div class="action action1"></div>
-                            <div class="action action2"></div>
-                            <div class="action action3"></div>
-                        </section>
-            </section>
-            <section class="music-content border swing-in-top-fwd1">
-                <div class="songs song3 song-search"></div>
-                <section class="song-info">
-                    <p class="p-info">I want to be free - Freddy Mercury</p>
-                    <p>3.5 min</p>
-                </section>
-                        <section class="actions margin-actions">
-                            <div class="action action1"></div>
-                            <div class="action action2"></div>
-                            <div class="action action3"></div>
-                        </section>
-            </section>
-            <section class="music-content border swing-in-top-fwd2">
-                <div class="songs song3 song-search"></div>
-                <section class="song-info">
-                    <p class="p-info">I want to be free - Freddy Mercury</p>
-                    <p>3.5 min</p>
-                </section>
-                        <section class="actions margin-actions">
-                            <div class="action action1"></div>
-                            <div class="action action2"></div>
-                            <div class="action action3"></div>
-                        </section>
-            </section>
-            <section class="music-content border swing-in-top-fwd3">
-                <div class="songs song1 song-search"></div>
-                <section class="song-info">
-                    <p class="p-info">Radio gaga - Queen</p>
-                    <p>6.1 min</p>
-                </section>
-                        <section class="actions margin-actions">
-                            <div class="action action1"></div>
-                            <div class="action action2"></div>
-                            <div class="action action3"></div>
-                        </section>
-            </section>
-            <section class="music-content border swing-in-top-fwd4">
-                <div class="songs song3 song-search"></div>
-                <section class="song-info">
-                    <p class="p-info">I want to be free - Freddy Mercury</p>
-                    <p>3.5 min</p>
-                </section>
-                        <section class="actions margin-actions">
-                            <div class="action action1"></div>
-                            <div class="action action2"></div>
-                            <div class="action action3"></div>
-                        </section>
-            </section>
+
+        <div class="mas-canciones2 swing-in-top-fwd4"></div>
+    <!-------------------------------- muestro albums del artista----------->
+    <h1 class="margen encabezado border">Albumes</h1>
+    <section class="music-content">
+        <div class="cont-music album">
+            <div class="songs song2 "><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+            <p class="name">News of the world</p>
         </div>
+        <div class="cont-music">
+            <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+            <p class="name">A night at the opera</p>
+        </div>
+
     </section>
-    <div class="mas-canciones"></div>
+    <!-------------------------------- Playlist del artista----------->
+    <h1 class="margen encabezado border">Playlist</h1>
+    <section class="music-content">
+
+        <section class="music-content">
+
+            <a href="playlist.html"><div class="cont-music">
+                <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Queen</p>
+            </div></a>
+            <a href="playlist.html"> <div class="cont-music">
+                <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Pink Floyd</p>
+            </div></a>
+            <a href="playlist.html"><div class="cont-music">
+                <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Freddy Mercury</p>
+            </div></a>
+            <a href="playlist.html"> <div class="cont-music">
+                <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Cacho Castaña</p>
+            </div></a>
+            <a href="playlist.html"><div class="cont-music">
+                <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Michael Jackson</p>
+            </div></a>
+            <a href="playlist.html"> <div class="cont-music">
+                <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
+                <p class="name">Cacho Castaña</p>
+            </div></a>
+        </section>
+
+    </section>
+
     <div class="espacio-blanco"></div>
 
+    <!-------------------------------- FOOTER----------->
    <section class="pie">
         <!-- <section class="player"> 
            <section class="artista">
