--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -21,16 +21,16 @@
         
     </header>
     <section class="content">
-        <section class="sugerencias">
-            <!-- back--><a href="home.html" class="back"></a>
+    <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
+    <section class="sugerencias">
 
             <h1>Resultados de búsqueda</h1>
         </section>
         <section class="filtros">
-            <div class="filtro">Canciones</div>
-            <div class="filtro">Playlist</div>
-            <div class="filtro">Artistas</div>
-            <div class="filtro">Podcast</div>
+            <div class="filtro"> <p>Canciones</p></div>
+            <div class="filtro"><p>Playlist</p></div>
+            <div class="filtro"><p>Artistas</p></div>
+            <div class="filtro"><p>Podcast</p></div>
         </section>
         <section class="music-content border swing-in-top-fwd">
             <div class="songs song2 song-search"></div>
@@ -81,7 +81,7 @@
                     </section>
         </section>
         <section class="music-content border swing-in-top-fwd4">
-            <div class="songs song1 song-search"></div>
+            <div class="songs song5 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Beat it - Michael Jackson</p>
                 <p>5.8 min</p>
@@ -142,7 +142,7 @@
                         </section>
             </section>
             <section class="music-content border swing-in-top-fwd4">
-                <div class="songs song1 song-search"></div>
+                <div class="songs song5 song-search"></div>
                 <section class="song-info">
                     <p class="p-info">Beat it - Michael Jackson</p>
                     <p>5.8 min</p>
