--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -25,7 +25,7 @@
     </header>
 
     <article class="content">
-        <!-- back--><a href="home.html" class="back"></a>
+    <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
 
         <article class="head-playlist">
 
@@ -62,7 +62,7 @@
 
         <table class="table-playlist">
             <thead>
-                <tr class="fila ">
+                <tr class="fila">
                     <td class="celda"></td>
                     <td class="celda">Titulo</td>
                     <td class="celda">Artista</td>
