--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html"  class="logo-navigation"><img src="../images/logo_blanco1.png" alt=""></a>
         <input type="text" placeholder="  Buscar..." class="search">
-        <a href="buscado.html"><div class="lupa"></div></a>
+        <a href="buscado.html"><img class="lupa"src="../images/lupa.png" alt=""></a>
         
         <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
         <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
@@ -58,30 +58,30 @@
             </section>
         </section>
         <section class="music-sections swing-in-top-fwd">
-            <h3>Más escuchado</h3>
+            <h3>Top 10 en Argentina </h3>
             <section class="music-content">
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song4"></div>
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
@@ -97,62 +97,56 @@
                 <section class="music-content">
 
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
-                <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song4"></div>
+                <a href="playlist.html"><div class="cont-music">
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
-                <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song1"></div>
+                <a href="playlist.html"><div class="cont-music">
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
-<!--                 <div class="songs song1"></div>
-                <div class="songs song2"></div>
-                <div class="songs song3"></div>
-                <div class="songs song4"></div>
-                <div class="songs song5"></div>
-                <div class="songs song6"></div> -->
             </section>
         </section>
         <section class="music-sections swing-in-top-fwd">
             <h3>Playlist</h3>
             <section class="music-content">
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song4"></div>
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
@@ -167,27 +161,27 @@
             <h3>Podcast</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song4"></div>
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
@@ -203,27 +197,27 @@
                 <section class="music-content">
 
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song4"></div>
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
@@ -238,7 +232,7 @@
             <h3>Para entrenar</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
@@ -246,19 +240,19 @@
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"></div>
+                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song4"></div>
+                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"></div>
+                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"></div>
+                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
@@ -293,6 +287,5 @@
     <section class="pie">
         <section class="player"></section>    
     </section>
-    
 </body>
 </html>
