--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="home.html" class="logo-navigation"></a>
+        <a href="home.html"  class="logo-navigation"><img src="../images/logo_blanco1.png" alt=""></a>
         <input type="text" placeholder="  Buscar..." class="search">
         <a href="buscado.html"><div class="lupa"></div></a>
 
@@ -23,6 +23,8 @@
         <a class="links" href="ayuda.html" >Ayuda</a>
         <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
     </header>
+
+    <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
 
     <div class="cont-cuenta">
         <h2 class="tit-plan">Estos son tus datos</h2>
