Page artist, home and playlist responsive

--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -24,10 +24,10 @@
         <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
         
         <section class="sugerencias">
-            <h1 class="border">Artista:  Queen</h1>
+            <h1 class="border h1-artista">Artista:  Queen</h1>
         </section>
 
-        <h1 class="margen encabezado border">Canciones</h1>
+        <h1 class="margen encabezado border h1-artista">Canciones</h1>
         <section class="art">
             <table class="table-playlist">
                 <tbody>
@@ -167,7 +167,7 @@
 
         <div class="mas-canciones2 swing-in-top-fwd4"></div>
     <!-------------------------------- muestro albums del artista----------->
-    <h1 class="margen encabezado border">Albumes</h1>
+    <h1 class="margen encabezado border h1-artista">Albumes</h1>
     <section class="music-content">
         <div class="cont-music album">
             <div class="songs song2 "><img  class="play" src="../images/play-hidden.png" width="70px" alt="play"></div>
@@ -180,7 +180,7 @@
 
     </section>
     <!-------------------------------- Playlist del artista----------->
-    <h1 class="margen encabezado border">Playlist</h1>
+    <h1 class="margen encabezado border h1-artista">Playlist</h1>
     <section class="music-content">
 
         <section class="music-content">
