--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="home.html"  class="logo-navigation"><img src="../images/logo_blanco1.png" alt=""></a>
+        <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
         <input type="text" placeholder="  Buscar..." class="search">
         <a href="buscado.html"><img class="lupa"src="../images/lupa.png" alt=""></a>
         
