--- a/TPE5-diazpace_molleker_lucero/html/playlist.html
+++ b/TPE5-diazpace_molleker_lucero/html/playlist.html
@@ -34,9 +34,9 @@
             <section class="description-playlist">
                 <div>
                     <p class="encabezado">Mi supermix</p> 
-                    <p>Lista de reproduccion • 2020</p> 
-                    <p>100 canciones</p> 
-                    <p>Mix con canciones de todos tus gustos musicales. </p>
+                    <p class="texto-playlist">Lista de reproduccion • 2020</p> 
+                    <p class="texto-playlist">100 canciones</p> 
+                    <p class="texto-playlist">Mix con canciones de todos tus gustos musicales. </p>
 
                     <form class="stars encabezado">
                        <p class="clasificacion">
@@ -74,7 +74,7 @@
             <tbody>
                 <tr class="fila slide-in-elliptic-top-fwd">
                                         
-                    <td class="celda celda-song1"></td>
+                    <td class="celda celda-song celda-song1"></td>
                     <td class="celda">Hey you</td>
                     <td class="celda">Pink Floyd</td>
                     <td class="celda">Album</td>
