nuevo header en todas las paginas, acomodando responsive

--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -232,7 +232,7 @@
         
     </section>
             
-    </section>
     <script src="../js/puntuacion.js"></script>
+    <script src="../js/js.js"></script>
 </body>
 </html>
