--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="home.html" class="logo-navigation"></a>
-        
+        <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
     </header>
+    
 
     <section class="ayuda">
     <!--flecha atras--><a href="index.html"><div class="back"></div></a>
@@ -59,6 +59,7 @@
             </div>
         </div>
     </section>
+    <div class="espacio-blanco"></div>
     <div class="espacio-blanco"></div>
 
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
