--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="home.html" class="logo-navigation"></a>
+        <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
         <div class="relleno"></div>
 
         <section class="container-links">
@@ -32,7 +32,7 @@
         
     </article>
 
-    <article id="opciones" class="plan-list">        
+    <article id="opciones" class="plan-list  opciones-index">        
         <h2 class="tit-plan">Elegi tu opcion favorita y disfruta!</h2>
 
         <section class="planes">
@@ -46,6 +46,11 @@
             </div>
         </section>
     </article>
+
+    <section class="opciones-login">
+        <a href="inicio-sesion.html" class="fuerte"><button class="inicio-sesion fuerte">Iniciar sesión</a></button>
+        <a href="opciones-plan.html"class="fuerte"><button class="registrarse">Registrarse</a></button>
+    </section>
 <!--
     <footer class="contact"> 
         <section class="social-media">
