--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="index.html" class="logo-navigation"></a>
+        <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
         
         <div class="relleno"></div>
         <div class="relleno"></div>
