Casi listo, falta acomodar cancion y hacer el reproductor

--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -14,8 +14,10 @@
 <body>
     <header class="navegation">
         <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
+        
+
+        <a class="links derecha fuerte" href="ayuda-inicio.html">Ayuda</a>
     </header>
-    
 
     <section class="ayuda">
     <!--flecha atras--><a href="index.html"><div class="back"></div></a>
