--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -45,6 +45,8 @@
         </section>
     </header>
 
+    <!--flecha atras--><a href="home.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
+
     <div class="cont-cuenta">
         <h2 class="tit-plan">Comentarios</h2>
         <div> 
