--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -15,10 +15,11 @@
     <header class="navegation">
         <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
         <div class="relleno"></div>
+        <div class="relleno"></div>
 
         <section class="container-links">
-            <a href="inicio-sesion.html"><button class="login">Iniciar sesión</a></button>
-            <a href="#opciones"class="registrarse"><button class="registrarse">Registrarse</a></button>
+            <a href="inicio-sesion.html"><button class="login opciones-index">Iniciar sesión</a></button>
+            <a href="#opciones"class="registrarse"><button class="registrarse opciones-index">Registrarse</a></button>
         </section>
     </header>
 
@@ -28,8 +29,7 @@
         </section>    
         <section class="index">
             <a href="#opciones"><button class="btn-index">Prueba ahora</button></a>
-        </section>    
-        
+        </section>            
     </article>
 
     <article id="opciones" class="plan-list  opciones-index">        
@@ -47,9 +47,9 @@
         </section>
     </article>
 
-    <section class="opciones-login">
-        <a href="inicio-sesion.html" class="fuerte"><button class="inicio-sesion fuerte">Iniciar sesión</a></button>
-        <a href="opciones-plan.html"class="fuerte"><button class="registrarse">Registrarse</a></button>
+    <section class="container-links oculto">
+        <a href="inicio-sesion.html"><button class="login espacio">Iniciar sesión</a></button>
+        <a href="#opciones"class="registrarse"><button class="registrarse">Registrarse</a></button>
     </section>
 <!--
     <footer class="contact"> 
