--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -12,14 +12,8 @@
 <body>
     <header class="navegation">
         <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
-        
-        <div class="relleno"></div>
-        <div class="relleno"></div>
-        <div class="relleno"></div>
-
-        <a class="links" href="ayuda-inicio.html">Ayuda</a>
+        <a class="links derecha" href="ayuda-inicio.html">Ayuda</a>
     </header>
-    
     <!--flecha atras--><a href="index.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
 
     <article>
