--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -7,7 +7,6 @@
     <title>Spoiler Five</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <script src="../js/js.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
 </head>
@@ -40,9 +39,6 @@
                     <li><a class="links fuerte" href="mi-cuenta.html">Mi cuenta</a></li>
                     <li><a class="links" href="ayuda.html" >Ayuda</a></li>
                     <li><a class="links" href="notificaciones.html"><div class="notificacion"></div></a></li>
-                    <li><img class="lupa m" src="../images/lupa.png" alt="lupa-buscar">    
-                        <input class="search m" type="text" placeholder="Buscar..." >
-                        </li>
                 </ul>      
             </section>  
         </section>
@@ -52,15 +48,15 @@
     <section>
 
         <div class="cont-cuenta ">
-            <h2 class="tit-plan">Estos son tus datos</h2>
+            <h2 class="tit-plan">Tus datos</h2>
             <form class="flex">
-                <label>Tu usuario</label>
+                <label class="fuerte">Tu usuario</label>
                 <input class="input-login fuerte" type="text"  placeholder="  juan-perez">
-                <label>Tu contraseña</label>
+                <label class="fuerte">Tu contraseña</label>
                 <input class="input-login fuerte" type="text" placeholder="  juan2020">
-                <label>Tu e-mail</label>
+                <label class="fuerte">Tu e-mail</label>
                 <input class="input-login fuerte" type="text" placeholder="  juan-perez@gmail.com">
-                <label>Tu plan</label>
+                <label class="fuerte">Tu plan</label>
                 <select class="input-login fuerte" name="planes" placeholder=" FREE">
                     <option value="FREE">FREE</option> 
                     <option value="Individual">Individual</option> 
