--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -7,7 +7,6 @@
     <title>Spoiler Five</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <script src="../js/js.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
 </head>
@@ -40,9 +39,6 @@
                     <li><a class="links" href="mi-cuenta.html">Mi cuenta</a></li>
                     <li><a class="links" href="ayuda.html" >Ayuda</a></li>
                     <li><a class="links" href="notificaciones.html"><div class="notificacion"></div></a></li>
-                    <li><img class="lupa m" src="../images/lupa.png" alt="lupa-buscar">    
-                        <input class="search m" type="text" placeholder="Buscar..." >
-                        </li>
                 </ul>      
             </section>  
         </section>
@@ -65,11 +61,11 @@
         <form class="flex">
             <div id="actualizar-plan-notific">
                 <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="actualizar-plan.html">Actualizá tu plan</a> </button>
+                <button id="btn-act-plan" > <a href="actualizar-plan.html" class="fuerte">Actualizá tu plan</a> </button>
             </div>
         </form>
     </div>
-    <div class="espacio-blanco"></div>
+    <div class="espacio-blanco2"></div>
 
     <section class="pie">
         <!-- <section class="player"> 
