Mi-cuenta listo y en responsive

--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -64,7 +64,7 @@
                     <option value="Familiar">Familiar</option> 
 
                 </select>
-                <div>
+                <div id="datos">
                     <button id="btn-descartar-datos" ><a class="fuerte" id="descartar" href="home.html">Descartar</a></button>
                     <button id="btn-modificar-datos" ><a class="fuerte" href="home.html">Guardar</a></button>
                 </div>
