Listo mi-cuenta en responsive + boton salir

--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -45,10 +45,12 @@
     </header>
 
     <!--flecha atras--><a href="home.html"><img class="atras m" src="../images/icono_flecha_atras.png"></a>
+    
+    <a href="index.html" class="salir fuerte">Salir</a>
     <section>
-
-        <div class="cont-cuenta ">
+        <div class="cont-cuenta">
             <h2 class="tit-plan">Tus datos</h2>
+
             <form class="flex">
                 <label class="fuerte">Tu usuario</label>
                 <input class="input-login fuerte" type="text"  placeholder="  juan-perez">
