Listo vista de notificaciones en espacios vacios y responsive

--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -44,29 +44,34 @@
         </section>
     </header>
 
-    <div class="cont-cuenta">
-        <!-- back--><a href="home.html" class="back"></a>
+    <!--flecha atras--><a href="home.html"><img class="atras m" src="../images/icono_flecha_atras.png"></a>
 
-        <h2 class="tit-plan">Tus Notificaciones</h2>
+    <div class="cont-cuenta">
+        
+        <h1 class="tit-registro">Tus Notificaciones</h1>
         <div id="lista-comentarios">
-            <div class="un-comentario-negrita primero"><p class="com"></p></div>
+           <!-- <div class="un-comentario-negrita primero"><p class="com"></p></div>-->
+            <div class="un-comentario fuerte"><h2>Nuevos</h2></div>
             <div class="un-comentario-negrita"><p class="com">25/11/2020 - Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
             <div class="un-comentario-negrita"><p>25/11/2020 - Como usar nuestra app -  Spoiler Five Team</p></div>
+            <div class="un-comentario fuerte"><h2>Anteriores</h2></div>
             <div class="un-comentario"><p>15/09/2020 - Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
             <div class="un-comentario"><p>01/08/2020 -  Actualizá tu plan ahora! -  Spoiler Five Team</p></div>
             <div class="un-comentario"><p>10/07/2020 -  Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
             <div class="un-comentario"><p>05/06/2020 - Lo nuevo -  Spoiler Five Team</p></div>
             <div class="un-comentario"><p>15/05/2020 -  Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
             <div class="un-comentario"><p>01/04/2020 - Conocé los nuevos Planes Premium -  Spoiler Five Team</p></div>
+            <div class="espacio-blanco2"></div>
+
         </div>
-        <form class="flex">
-            <div id="actualizar-plan-notific">
-                <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="actualizar-plan.html" class="fuerte">Actualizá tu plan</a> </button>
-            </div>
-        </form>
+
+        <div id="seleccion">
+            <div class="un-comentario fuerte"><h2>Selecciona una notificacion para abrirla</h2></div>
+        </div>
+        <div class="campanita">
+            <img src="../images/icono_notificaciones_gris.png" width="150px" alt="">
+        </div>
     </div>
-    <div class="espacio-blanco2"></div>
 
     <section class="player">
             
